added description and link to github

--- a/index.html
+++ b/index.html
@@ -5,5 +5,7 @@
 </head>
 <body>
   <h1>Nicholas Ngare</h1>
+  <p>This my website that is still under construction.</p>
+  <a href="https://github.com/nwngare"> Github </a>
 </body>
 </html>
