added link to my Linkedin

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
 <body>
   <h1>Nicholas Ngare</h1>
   <p>This my website that is still under construction.</p>
-  <a href="https://github.com/nwngare"> Github </a>
+  <p>The following are links to my Github and Linkedin accounts:</p>
+    <ul>  
+      <li>
+        <a href="https://github.com/nwngare">Github</a>
+      </li>
+      <li>
+        <a href="https://www.linkedin.com/in/nicholas-ngare-230a74112/">Linkedin</a>
+      </li>  
 </body>
 </html>
