--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
   <h1>Nicholas Ngare</h1>
-  <p>This my website that is still under construction.</p>
+  <p>This is my website that is still under construction.</p>
   <p>The following are links to my Github and Linkedin accounts:</p>
     <ul>  
       <li>
