--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>The following are links to my Github and Linkedin accounts:</p>
     <ul>  
       <li>
-        <a href="https://github.com/nwngare">Github</a>
+        <a href="https://github.com/nwngare" target="_blank">Github</a>
       </li>
       <li>
         <a href="https://www.linkedin.com/in/nicholas-ngare-230a74112/">Linkedin</a>
