updated for linkedin

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <a href="https://github.com/nwngare" target="_blank">Github</a>
       </li>
       <li>
-        <a href="https://www.linkedin.com/in/nicholas-ngare-230a74112/">Linkedin</a>
+        <a href="https://www.linkedin.com/in/nicholas-ngare-230a74112/" target="_blank">Linkedin</a>
       </li>  
 </body>
 </html>
