added comment on target="_blank"

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <p>The following are links to my Github and Linkedin accounts:</p>
     <ul>  
       <li>
+        <!--target="_blank" does not work in chrome to open a new window when link is clicked on-->
         <a href="https://github.com/nwngare" target="_blank">Github</a>
       </li>
       <li>
