--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+  <link href="style.css" type="text/css" rel="stylesheet">
 <head>
   <title>Nicholas Ngare Website</title>  
 </head>
