changed font to roboto

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <link href="style.css" type="text/css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" type="text/css" rel="stylesheet">
 <head>
   <title>Nicholas Ngare Website</title>  
 </head>
