--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
 </head>
 <body>
   <h1>Nicholas Ngare</h1>
-  <p>This is my website that is still under construction.</p>
-  <p>The following are links to my Github and Linkedin accounts:</p>
-    <ul>  
-      <li>
-        <!--target="_blank" does not work in chrome to open a new window when link is clicked on-->
-        <a href="https://github.com/nwngare" target="_blank">Github</a>
-      </li>
-      <li>
-        <a href="https://www.linkedin.com/in/nicholas-ngare-230a74112/" target="_blank">Linkedin</a>
-      </li>  
+  <div class="main">
+    <p>This is my website that is still under construction.</p>
+    <p>The following are links to my Github and Linkedin accounts:</p>
+      <ul>  
+        <li>
+          <!--target="_blank" does not work in chrome to open a new window when link is clicked on-->
+          <a href="https://github.com/nwngare" target="_blank">Github</a>
+        </li>
+        <li>
+          <a href="https://www.linkedin.com/in/nicholas-ngare-230a74112/" target="_blank">Linkedin</a>
+        </li>
+  </div> 
 </body>
 </html>
