Added a purpose for this website

--- a/index.html
+++ b/index.html
@@ -20,6 +20,8 @@
           <a href="https://www.linkedin.com/in/nicholas-ngare-230a74112/" target="_blank">Linkedin</a>
         </li>
     -->
+    <br>
+    <p>Duke Computer Science grad growing my knowledge of programming and software development one project at a time!</p>
   </div> 
 </body>
 </html>
