Moved description paragraph up

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <link href="style.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" type="text/css" rel="stylesheet">
 <head>
-  <title>Nicholas Ngare Website</title>  
+  <title>Nicholas Ngare</title>  
 </head>
 <body>
   <h1>Nicholas Ngare</h1>
   <div class="main">
-    <p>This is my website that is still under construction.</p>
+    <p>This is my website that is still under construction.<br>Duke Computer Science grad growing my knowledge of programming and software development one project at a time!</p>
     <!--
     <p>The following are links to my Github and Linkedin accounts:</p>
       <ul>  
@@ -20,8 +20,6 @@
           <a href="https://www.linkedin.com/in/nicholas-ngare-230a74112/" target="_blank">Linkedin</a>
         </li>
     -->
-    <br>
-    <p>Duke Computer Science grad growing my knowledge of programming and software development one project at a time!</p>
   </div> 
 </body>
 </html>
