--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 <body>
   <h1>Nicholas Ngare</h1>
   <div class="main">
-    <p>This is my website that is still under construction.<br>Duke Computer Science grad growing my knowledge of programming and software development one project at a time!</p>
+    <p>This is my website that is still under construction.
+      <br>
+      Duke Computer Science grad advancing my knowledge of computer programming and software development one project at a time!</p>
     <!--
     <p>The following are links to my Github and Linkedin accounts:</p>
       <ul>  
