Worked on website formatting

--- a/index.html
+++ b/index.html
@@ -1,27 +1,59 @@
 <!DOCTYPE html>
-<html>
-  <link href="style.css" type="text/css" rel="stylesheet">
+<html lang="en">
+  <link href="./css/style.css" type="text/css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto" type="text/css" rel="stylesheet">
-<head>
-  <title>Nicholas Ngare</title>  
-</head>
-<body>
-  <h1>Nicholas Ngare</h1>
-  <div class="main">
-    <p>This is my website that is still under construction.
-      <br>
-      Duke Computer Science grad advancing my knowledge of computer programming and software development one project at a time!</p>
-    <!--
-    <p>The following are links to my Github and Linkedin accounts:</p>
-      <ul>  
-        <li>
-          target="_blank" does not work in chrome to open a new window when link is clicked on
-          <a href="https://github.com/nwngare" target="_blank">Github</a>
-        </li>
-        <li>
-          <a href="https://www.linkedin.com/in/nicholas-ngare-230a74112/" target="_blank">Linkedin</a>
-        </li>
-    -->
-  </div> 
-</body>
+  <head>
+  	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width">
+	<meta name="author" content="Nicholas Ngare">
+    <title>Nicholas Ngare</title>  
+  </head>
+  <body>
+  	<header>
+  	  <div class="container">
+  	  	<div id="website-title">
+          <h1>Nicholas Ngare</h1>
+        </div>
+        <nav>
+        	<ul>
+        		<li><a href="index.html">Home</a></li>
+        		<li><a href="biography.html">Biography</a></li>
+        		<li><a href="resume.html">Resume</a></li>
+        		<li><a href="contact.html">Contact</a></li>
+        	</ul>
+        </nav>
+      </div>
+    </header>
+
+    <section id="main">
+      <div class="container">
+        <p>This is my website that is still under construction.
+          <br>
+          Welcome to my page! My name is Nick and I'm a recent Duke Computer Science grad advancing my knowledge of computer programming and software development one project at a time!</p>
+      </div>
+    </section>
+
+    <section id="accounts">
+      <div class="container">
+    	<p>The following are links to my Github and Linkedin accounts:</p>
+        <ul>  
+          <li>
+            <!--target="_blank" does not work in chrome to open a new window when link is clicked on-->
+            <a href="https://github.com/nwngare" target="_blank">
+          	  <img src="./images/GitHub-Mark-32px.png" alt="Github" height="28" width="28">
+            </a>
+          </li>
+          <li>
+            <a href="https://www.linkedin.com/in/nicholas-ngare-230a74112/" target="_blank">
+          	  <img src="./images/In-Black-14px.png" alt="LinkedIn" height="28" width="28">
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+
+    <footer>
+    	<p>Email: nicholas.ngare17@gmail.com</p>
+    </footer>
+  </body>
 </html>
