Added smooth scrolling behavior to automatically scroll to different sections of my one page portfolio

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                         <li class="nav-item active">
-                            <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="#welcome">Home <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#about">About</a>
@@ -40,19 +40,19 @@
                 <h1> Hi, I'm Nick</h1>
             </header>
             <section class="content">
-                <section class="welcome">
+                <section id="welcome">
                     <h2>Welcome to My Personal Website!</h2>
                     <p>It is currently under construction, but version 1.0.0 should be up and running soon.</p>
                 </section>
-                <section class="about">
+                <section id="about">
                     <h2>A Little Bit About Me...</h2>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sollicitudin faucibus ex, sed tristique nulla viverra eget. Ut eu imperdiet ipsum. Maecenas a libero arcu. Nam nec arcu nulla. Etiam vestibulum felis venenatis turpis maximus bibendum. Nunc in lacus non odio pulvinar iaculis eu non libero. Integer erat ex, elementum eget malesuada sed, cursus vitae nunc. Vestibulum a tellus nec dolor ultricies faucibus non eget libero. Etiam posuere iaculis nisi, at aliquam sem scelerisque ultricies. In fringilla egestas tristique. Nullam pellentesque vel mauris tristique ornare. Nullam id porta sem. Integer ac lacus auctor, commodo magna a, venenatis odio. Aenean finibus luctus tortor in porta. Curabitur a varius tortor, varius vestibulum nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
                 </section>
-                <section class="projects">
+                <section id="projects">
                     <h2>Projects</h2>
                     <p>Aliquam vel venenatis mi. Mauris ultricies, lectus a lobortis bibendum, turpis erat pretium sem, id suscipit mauris elit in nunc. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer ut dolor malesuada, efficitur diam sed, placerat erat. Fusce sodales ac mauris id suscipit. Quisque non turpis sed tellus ornare rutrum. Phasellus feugiat odio massa, et semper eros dapibus vel. Nam tempus tempus bibendum. In iaculis dui vitae bibendum varius. Morbi malesuada lacinia sapien non vehicula. Duis nec pretium odio. Cras at porttitor eros, ut lacinia mauris. Donec eget odio lectus. Ut et erat eu neque ornare iaculis vel ut mi. Proin ac lectus in mi interdum interdum vitae vitae magna. Proin et scelerisque ante.</p>
                 </section>
-                <section class="contact">
+                <section id="contact">
                     <h2>Contact Me</h2>
                     <p>Etiam id maximus nulla. Aenean tincidunt sed tortor sit amet molestie. In lorem lacus, volutpat rutrum elementum a, scelerisque a justo. Sed sit amet purus eget nunc vehicula suscipit et vitae quam. Quisque a dui sem. Etiam in finibus orci, ut venenatis est. Duis commodo ipsum vitae lectus condimentum, eget dignissim nulla feugiat. Pellentesque nec imperdiet nunc. Cras ornare elementum pretium. Nam pellentesque massa ut ipsum feugiat finibus vitae a nibh. Duis sed ultrices nisi. Suspendisse potenti. Quisque fermentum, dolor sed laoreet faucibus, libero magna volutpat erat, vel tincidunt urna justo eu massa.</p>
                 </section>
