--- a/index.html
+++ b/index.html
@@ -1,76 +1,121 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>Nicholas Ngare | Programmer</title>
-        <!-- Required meta tags -->
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+<head>
+    <title>Nicholas Ngare | Programmer</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
-        <link href="assets/css/styles.css" type="text/css" rel="stylesheet" />
-        <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-    </head>
-    <body>
-        <div class="wrapper">
-            <!-- Navigation Bar -->
-            <nav class="navbar navbar-expand-lg navbar-light bg-light main-navigation">
-                <a class="navbar-brand" href="#">Navbar</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
-                    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="#welcome">Home <span class="sr-only">(current)</span></a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#projects">Projects</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#contact">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </nav>
-            <header class="main-header">
-                <h1> Hi, I'm Nick</h1>
-            </header>
-            <section class="content">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
+        integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+    <link href="assets/css/styles.css" type="text/css" rel="stylesheet" />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+</head>
+<body>
+    <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
+        <a class="navbar-brand" href="#">Nicholas Ngare</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#welcome">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#about">About</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#projects">Projects</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#contact">Contact</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+    <header>
+        <div class="jumbotron jumbotron-fluid vertical-center">
+            <div class="container">
+                <h1 class="display-4">Hi, I'm Nick</h1>
+            </div>
+        </div>
+    </header>
+    <main role="main" class="container">
+        <section class="content">
+            <div class="container">
                 <section id="welcome">
-                    <h2>Welcome to My Personal Website!</h2>
-                    <p>It is currently under construction, but version 1.0.0 should be up and running soon.</p>
+                    <div class="row text-center">
+                        <div class="col">
+                            <h2>Welcome to My Personal Website!</h2>
+                            <p>I'm a technical product specialist based in Raleigh, NC that specializes in supporting
+                                enterprise applications, and in my freetime I build applications to sharpen my
+                                development skills.</p>
+                        </div>
+                    </div>
                 </section>
                 <section id="about">
-                    <h2>A Little Bit About Me...</h2>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin sollicitudin faucibus ex, sed tristique nulla viverra eget. Ut eu imperdiet ipsum. Maecenas a libero arcu. Nam nec arcu nulla. Etiam vestibulum felis venenatis turpis maximus bibendum. Nunc in lacus non odio pulvinar iaculis eu non libero. Integer erat ex, elementum eget malesuada sed, cursus vitae nunc. Vestibulum a tellus nec dolor ultricies faucibus non eget libero. Etiam posuere iaculis nisi, at aliquam sem scelerisque ultricies. In fringilla egestas tristique. Nullam pellentesque vel mauris tristique ornare. Nullam id porta sem. Integer ac lacus auctor, commodo magna a, venenatis odio. Aenean finibus luctus tortor in porta. Curabitur a varius tortor, varius vestibulum nulla. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos.</p>
+                    <div class="row text-center">
+                        <div class="col">
+                            <h2>A Little Bit About Me...</h2>
+                            <p>Hi! I'm Nick, a programmer in the Raleigh-Durham area looking to break into the software
+                                engineering.</p>
+                        </div>
+                    </div>
                 </section>
                 <section id="projects">
-                    <h2>Projects</h2>
-                    <p>Aliquam vel venenatis mi. Mauris ultricies, lectus a lobortis bibendum, turpis erat pretium sem, id suscipit mauris elit in nunc. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer ut dolor malesuada, efficitur diam sed, placerat erat. Fusce sodales ac mauris id suscipit. Quisque non turpis sed tellus ornare rutrum. Phasellus feugiat odio massa, et semper eros dapibus vel. Nam tempus tempus bibendum. In iaculis dui vitae bibendum varius. Morbi malesuada lacinia sapien non vehicula. Duis nec pretium odio. Cras at porttitor eros, ut lacinia mauris. Donec eget odio lectus. Ut et erat eu neque ornare iaculis vel ut mi. Proin ac lectus in mi interdum interdum vitae vitae magna. Proin et scelerisque ante.</p>
+                    <div class="row text-center">
+                        <div class="col">
+                            <h2>Projects</h2>
+                        </div>
+                    </div>
+                    <div class="card-deck">
+                        <div class="card">
+                            <h3 class="card-header">Feighvor</h3>
+                            <div class="card-body">
+                                <p>iOS app for on campus food delivery at Duke University</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <h3 class="card-header">Machine Learning Project</h3>
+                            <div class="card-body">
+                                <p>Used TensorFlow to build a prediction model for the upcoming general election</p>
+                            </div>
+                        </div>
+                        <div class="card">
+                            <h3 class="card-header">Interpreter</h3>
+                            <div class="card-body">
+                                <p>Followed the tutorial <a target="_blank" rel="noopener noreferrer" href="https://craftinginterpreters.com/">Crafting Interpreters</a> by Bob Nystrom</p>
+                            </div>
+                        </div>
+                    </div>
                 </section>
                 <section id="contact">
-                    <h2>Contact Me</h2>
-                    <p>Etiam id maximus nulla. Aenean tincidunt sed tortor sit amet molestie. In lorem lacus, volutpat rutrum elementum a, scelerisque a justo. Sed sit amet purus eget nunc vehicula suscipit et vitae quam. Quisque a dui sem. Etiam in finibus orci, ut venenatis est. Duis commodo ipsum vitae lectus condimentum, eget dignissim nulla feugiat. Pellentesque nec imperdiet nunc. Cras ornare elementum pretium. Nam pellentesque massa ut ipsum feugiat finibus vitae a nibh. Duis sed ultrices nisi. Suspendisse potenti. Quisque fermentum, dolor sed laoreet faucibus, libero magna volutpat erat, vel tincidunt urna justo eu massa.</p>
+                    <div class="row text-center">
+                        <div class="col">
+                            <h2>Contact Me</h2>
+                        </div>
+                    </div>
                 </section>
-            </section>
-            <aside class="side">
-                <!-- sidebar content here -->
-                Sidebar
-            </aside>
-            <footer class="main-footer">
-                <!-- footer content here -->
-                &copy; Nicholas Ngare. All rights reserved.
-            </footer>
+            </div>
+        </section>
+    </main>
+    <footer class="main-footer">
+        <div class="container">
+            <div class="row text-center">
+                <div class="col">
+                    <!-- footer content here -->
+                    &copy; Nicholas Ngare. All rights reserved.
+                </div>
+            </div>
         </div>
-
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
-    </body>
+    </footer>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
+    <script src="assets/js/main.js"></script>
+</body>
 </html>
